--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,28 +35,37 @@ a:visited {text-decoration: none;}
 a:hover {text-decoration: underline;}
 a:active {text-decoration: none;}
 
-.top {
-	background: url('/images/scroll_top.gif');
-	width: 765px;
-	height: 50px;
-	z-index: 1;
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1250px;
+    }
+}
+
+.main-page:before, .main-page:after {
+    background: url('/images/scroll_top.gif') no-repeat center top;
+    content: '';
+    height: 50px;
+    left: 0;
+    position: absolute;
+    top: -11px;
+    width: 100%;
+}
+
+.main-page:after {
+    background: url('/images/scroll_bottom.gif') no-repeat center bottom;
+    bottom: -11px;
+    top: auto;
 }
 
 .main-page {
-	min-width: 0;
-	width: 745px;
-	word-wrap: break-word;
-	background: url(/images/scroll_middle.gif);
-	background-repeat: repeat-y;
-	margin: 0 auto;
-	margin-top: -25px;
-	margin-bottom: -25px;
-
+    background: url('/images/scroll_middle.gif') repeat-y top center;
+    padding: 50px 75px;
+    position: relative;
 }
 
 .main-page-header {
 	margin: 0 auto;
-	margin-top: 30px;
+	margin-top: 10px;
 	padding: 0 15px 0 15px;
 	width: 90%;
 	background: #99855D;
@@ -66,80 +75,73 @@ a:active {text-decoration: none;}
 
 .main-page-body {
 	margin: 0 auto;
-	width: 100%;
-	padding: 25px 25px 75px 25px;
+	padding: 25px 50px 25px 50px;
+	width: 765px;
 }
 
 .bottom {
 	background: url('/images/scroll_bottom.gif');
-	width: 765px;
 	height: 50px;
 	z-index: 1;
 }
 
-.news-latest-box {
+.latest-news {
 	border-bottom: solid black 1px;
-	padding: 20px 0px 20px 0px;
+	padding: 20px 20px 20px 0px;
 	transition: all .2s ease-in;
+	height: 200px;
 }
 
-.news-latest-box:hover {
+.latest-news:hover {
 	background: rgba(0, 0, 0, 0.2);
 }
 
-.news-latest-box a:link {color: black;}
-.news-latest-box a:visited {color: black;}
-.news-latest-box a:hover {color: black;}
-.news-latest-box a:active {color: black;}
+.latest-news .content a:link {color: black;}
+.latest-news .content a:visited {color: black;}
+.latest-news .content a:hover {color: black;}
+.latest-news .content a:active {color: black;}
 
-.news-latest-box a:link {text-decoration: none;}
-.news-latest-box a:visited {text-decoration: none;}
-.news-latest-box a:hover {text-decoration: none;}
-.news-latest-box a:active {text-decoration: none;}
+.latest-news .content a:link {text-decoration: none;}
+.latest-news .content a:visited {text-decoration: none;}
+.latest-news .content a:hover {text-decoration: none;}
+.latest-news .content a:active {text-decoration: none;}
 
-.news-latest-date {
+.latest-news .date {
 	text-align: center;
 	float: left;
-	margin-left: 15px;
-	margin-right: 15px;
+	margin: 0px 15px 0px 15px;
+
 	width: 3em;
 	text-align: center;
 	display: block;
+	height: 180px;
 }
 
-.news-latest-date-month {
-	font-size: 1.25em;
-}
-
-.news-latest-date-date {
+.latest-news .month {
+	font-family: 'runescape', sans-serif;
+	font-weight: bold;
 	font-size: 2em;
 }
 
-.news-latest-title {
-	font-size: 1.5em;
+.latest-news .day {
+	font-family: 'runescape', sans-serif;
+	font-weight: bold;
+	font-size: 2em;
+}
+
+.latest-news .title {
+	font-family: 'runescape', sans-serif;
+	font-weight: bold;
+	font-size: 2em;
 	margin:  -5px;
 }
 
-.news-latest-title:hover {
+.latest-news .title:hover {
 	color: #666666;
 }
 
-.news-latest-title-meta {
-	padding-bottom: 20px;
-}
-
-.triangle-right {
-	float: right;
-	width: 0;
-	height: 0;
-	border-top: 10px solid transparent;
-	border-left: 10px solid black;
-	border-bottom: 10px solid transparent;
-	margin-right: 5px;
-}
-
-.triangle-right:hover {
-	border-left: 10px solid #666666;
+.latest-news .meta {
+	padding-bottom: 5px;
 }
 
 .member-body {
@@ -218,22 +220,9 @@ a:active {text-decoration: none;}
 	justify-content: space-between;
 }
 
-.task-body {
-	padding: 0;
-	margin: 0;
-	list-style: none;
-	display: flex;
-	flex-flow: row;
-	justify-content: space-around;
-}
-
 .task-box {
 	background: #99855D;
-	border: solid #755B41 3px;
-	border-radius: 5px;
-	padding: 5px;
-	margin: 5px;
-	transition: padding .5s;
+	border-width: 3px;
 }
 
 table {
